--- a/QRC_phase1/Resources/layout/VoiceInput.axml
+++ b/QRC_phase1/Resources/layout/VoiceInput.axml
@@ -22,5 +22,6 @@
         android:text="Done!"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/voiceInputDoneBut" />
+        android:id="@+id/voiceInputDoneBut"
+        android:layout_marginTop="300dp" />
 </LinearLayout>
